# Compirer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  text.txt
include/: Lexer.h  Token.h
src/: Lexer.cpp  Token.cpp
